<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:background="@drawable/bg_top_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/selectphoto"
            android:textColor="@color/greetings_color"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_15sdp"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/ll_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/template_layout_bg"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/gallery_icon_bottom" />

                <TextView
                    android:id="@+id/tv_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/medium_margin"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/greetings_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/template_layout_bg"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/camera_icon_bottom" />

                <TextView
                    android:id="@+id/tvCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/medium_margin"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/greetings_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/template_layout_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/delete_icon_bottom" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/medium_margin"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/greetings_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/template_layout_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/ic_locate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/medium_margin"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/greetings_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>